.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconrcnic__c.object
<CustomObject>
    <description>soconrcnic__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconrcnic_soconrc__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__soconrcnic_soservice__r.rstk__soservice_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconrcnic_soservice__r.rstk__soservice_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcnic_earlyexit100__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, early termination results in being charged the full amount for the given Service period.</inlineHelpText>
        <label>Early Termination Fee is 100%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcnic_price__c</fullName>
        <inlineHelpText>The price per period for the given Service Component.</inlineHelpText>
        <label>Periodic Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcnic_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When set, the Periodic Price of for the given Service Component will be debited to this Sales (revenue) Account when Periodic Billing is run and the corresponding Invoice is generated.</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Recurring Charge Service Components</relationshipLabel>
        <relationshipName>soconrcnics3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcnic_soconrc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Recurring Charge</label>
        <referenceTo>rstk__soconrc__c</referenceTo>
        <relationshipLabel>Service Components</relationshipLabel>
        <relationshipName>soconrcnics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcnic_soservice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A valid Service Item representing a service provided under the given Contract.</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>rstk__soservice__c</referenceTo>
        <relationshipLabel>Recurring Charge Service Components</relationshipLabel>
        <relationshipName>soconrcnics2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Recurring Charge Service Components</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Recurring_Charge_Service_Components</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconrcnic_soservice__c</columns>
        <columns>rstk__soconrcnic_soconrc__c</columns>
        <columns>rstk__soconrcnic_price__c</columns>
        <columns>rstk__soconrcnic_salesacct__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Recurring Charge Service Components</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Charge Service Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Periodic_Price</fullName>
        <active>true</active>
        <description>Periodic Price must be greater than zero.</description>
        <errorConditionFormula>rstk__soconrcnic_price__c &lt;= 0</errorConditionFormula>
        <errorMessage>Periodic Price must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Account</fullName>
        <active>true</active>
        <description>Sales Account should belong to Recurring Charge Product Division and should be of  Revenue type.</description>
        <errorConditionFormula>(!ISNEW() &amp;&amp; ISCHANGED(rstk__soconrcnic_salesacct__c ) ) ||(!ISBLANK(rstk__soconrcnic_salesacct__c ) &amp;&amp; ( (rstk__soconrcnic_salesacct__r.rstk__syacc_div__c &lt;&gt;  rstk__soconrcnic_soconrc__r.rstk__soconrc_soprod__r.rstk__soprod_div__c ) ||  TEXT( rstk__soconrcnic_salesacct__r.rstk__syacc_gltype_pl__c ) &lt;&gt; &apos;Revenue&apos; ))</errorConditionFormula>
        <errorMessage>Sales Account is not modifiable, should belong to Recurring Charge Product Division and should be of  Revenue type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Service_Component</fullName>
        <active>true</active>
        <description>Service Component is Required ,not modifiable and should belong to Recurring Charge Product Division.</description>
        <errorConditionFormula>ISBLANK( rstk__soconrcnic_soservice__c ) || (! ISNEW() &amp;&amp;  ISCHANGED(rstk__soconrcnic_soservice__c ) ) || ( rstk__soconrcnic_soservice__r.rstk__soservice_div__c &lt;&gt;  rstk__soconrcnic_soconrc__r.rstk__soconrc_soprod__r.rstk__soprod_div__c )</errorConditionFormula>
        <errorMessage>Service Component is Required ,not modifiable and should belong to Recurring Charge Product Division.</errorMessage>
    </validationRules>
</CustomObject>